# trainable-tokenizer

./: .gitignore  INSTALL  LICENCE.html  README
CMake/: FindLIBICONV.cmake  FindLTDL.cmake  FindTBB.cmake
doc/: usage
doc/design-drafts-cz/: back-end  hruba_tokenizace  konfiguracni_soubory  paralelizace  post-back-end  xml_a_entity
models/schemes/czeng/: classes.split  four_digits.rep  lower_char.rep  lower_start.rep  lower_word.rep  number.rep  numbers.join  one_digit.rep  punct.rep  sent.break  three_digits.rep  tituly_pred_jmenem.listp  tituly_za_jmenem.listp  two_commas.join  two_digits.rep  upper_char.rep  upper_start.rep  upper_word.rep  word.rep  year.rep
models/schemes/czeng/cs/: currencies.listp  mesice.listp  neporadne_zkratky.listp  zkratky.listp  zkratky_jrc.listp
models/schemes/czeng/cs/.svn/: all-wcprops  entries
models/schemes/czeng/cs/.svn/text-base/: inicialy.listp.svn-base  li.listp.svn-base  maxent.params.svn-base  quo.listp.svn-base  stoleti.listp.svn-base  svati.listp.svn-base  train.fl.svn-base  zavorky.listp.svn-base
models/schemes/czeng/en/: bullets.listp  dont.listp  features  months.listp  quo.listp  suffixes.listp  titles.listp  us.listp
models/schemes/czeng/en/.svn/: all-wcprops  entries
models/schemes/czeng/en/.svn/text-base/: abbrev.listp.svn-base  abbrev_mess.listp.svn-base  ampm.listp.svn-base  maxent.params.svn-base  no_sent_end.listp.svn-base  prefixes.listp.svn-base  semistop.listp.svn-base  train.fl.svn-base
src/: CMakeLists.txt  Classifier.cpp  Classifier.hpp  Encoder.cpp  Encoder.hpp  FeatureExtractor.cpp  FeatureExtractor.hpp  OutputFormatter.cpp  OutputFormatter.hpp  RoughTokenizer.cpp  RoughTokenizer.hpp  SimplePreparer.cpp  SimplePreparer.hpp  TextCleaner.cpp  TextCleaner.hpp  alignment_exception.hpp  clean_entities.qx  clean_entities_only.qx  clean_xml.qx  config_exception.hpp  configuration.hpp  configuration.hpp.cmake  configuration.hpp.in  cutout_t.hpp  main.cpp  read_features.qx  read_features_file.cpp  read_features_file.hpp  rough_tok_compile.cpp  rough_tok_compile.hpp  roughtok_compile.cpp  roughtok_compile.hpp  text_cleaner.cpp  text_cleaner.hpp  token_t.hpp  utils.cpp  utils.hpp
src/CMake/: FindICU.cmake  FindLIBICONV.cmake  FindLTDL.cmake  FindMaxEnt.cmake  FindPCRECPP.cmake  FindTBB.cmake  LibFindMacros.cmake
src/pipes/: pipe.hpp
src/python/: analyze.py
src/rough-tok/: Makefile  rough-tok-interface.hpp  rough-tok-sample-quex.qx  rough-tok-wrapper.cpp
src/rough_tok/: CMakeLists.txt.cmake  CMakeLists.txt.in  no_init_exception.hpp  rough_tok_wrapper.cpp.cmake  rough_tok_wrapper.hpp
src/roughtok/: CMakeLists.txt.in  no_init_exception.hpp  roughtok_wrapper.cpp.in  roughtok_wrapper.hpp
